force-app/main/default/objects/Bot_Configuration_Detail__c/Bot_Configuration_Detail__c.object-meta.xml
<CustomObject>
    <label>Bot Configuration Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Configuration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>