force-app/main/default/objects/Bot_Configuration_Detail__c/fields/Bot_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Bot_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bot Configuration</label>
    <referenceTo>Bot_Configuration__c</referenceTo>
    <relationshipLabel>Bot Configuration Details</relationshipLabel>
    <relationshipName>Bot_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>