force-app/main/default/objects/Bot_Configuration_Detail__c/fields/Messaging_Session_Field__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session_Field__c</fullName>
    <label>Messaging Session Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>