force-app/main/default/objects/Bot_Configuration_Detail__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Bot Configuration Details</relationshipLabel>
    <relationshipName>Bot_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>