force-app/main/default/objects/Bot_Configuration_Detail__c/fields/Prompt_Data_Variable_Name__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Data_Variable_Name__c</fullName>
    <label>Prompt Data Variable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>